# sane-rust

./: Cargo.toml  LICENSE  README.md  flake.nix
examples/: write_arrays.rs
src/: data.rs  lib.rs  read.rs  write.rs
tests/arrays/: f64.sane  i8.sane  nested.sane  scalar.sane  simple.sane  u8.sane  vec.sane
