[package]
name = "sane-array"
version = "0.1.0"
edition = "2021"
description = "Read and write SANE-encoded multi-dimensional arrays"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/considerate/sane-rust"
repository = "https://github.com/considerate/sane-rust"

[dependencies]
ndarray = "0.15.6"
quickcheck = "1.0.3"
